# 3d-90-s-game-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  IMGUI.md  Makefile  PACKAGING.md  PKGBUILD  game90  game90.desktop  game90.spec  imgui.ini  map_editor
maps/: bsp_basic.map  custom.map  custom2.map
scripts/: build.sh  run.sh
src/: imgui_c.cpp  imgui_c.h  main.c  map_editor.c
src/editor/: map_editor.c
src/game/: main.c  map.c  map.h  render.c  render.h
src/ui/: imgui_c.cpp  imgui_c.h
